# Plaxel

./: .gitignore  CLAUDE.md  Cargo.toml  index.html
.cargo/: config.toml
.claude/: settings.local.json
editor/: Cargo.toml
editor/logic/: Cargo.toml
editor/logic/src/: editor.rs  hierarchy.rs  lib.rs
editor/runner/: Cargo.toml
editor/runner/src/: lib.rs  main.rs
editor/src/: editor.rs  main.rs
engine/: Cargo.toml  build.rs
engine/src/: assets.rs  lib.rs  renderer.rs  shader.wgsl
engine/src/assets/: loader.rs  manager.rs  material.rs  resources.rs
engine/src/core/: camera.rs  ecs.rs
engine/src/core/components/: core.rs
engine/src/logging/: mod.rs
engine/src/renderer/: core.rs  model.rs  texture.rs
engine/src/renderer/backends/: mod.rs  wgpu_backend.rs
game/logic/: Cargo.toml
game/logic/src/: lib.rs
game/runner/: Cargo.toml
game/runner/src/: main.rs
game/types/: Cargo.toml
game/types/src/: lib.rs  planet.rs  player.rs  render_graph.rs  vehicle.rs
res/shaders/: cube.wgsl  shader.wgsl
src/: camera.rs  engine.rs  lib.rs  main.rs  model.rs  renderer.rs  resources.rs  texture.rs
src/core/: ECS.rs
src/engine/: camera.rs  ecs.rs
src/engine/components/: core.rs  renderer.rs
src/renderer/: model.rs
