[workspace]
members = [
    "engine",
    "editor/runner",
    "editor/logic",
    "game/logic",
    "game/types",
    "game/runner",
]
resolver = "2"

[workspace.dependencies]
# Graphics / windowing
wgpu = "27.0.1"
winit = { version = "0.30", features = ["android-native-activity"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"

# Math / utils
cgmath = "0.18"
bytemuck = { version = "1.24", features = ["derive"] }
rand = "0.8.5"
pollster = "0.3"
tobj = { version = "3.2", default-features = false, features = ["async"] }

# Image
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "tga",
] }

# Logging / errors
anyhow = "1.0"
log = "0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
ron = "0.8"
serde = { version = "1", features = ["derive"] }
bincode = "1"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

# Hot reload
hot-lib-reloader = "0.8.2"

# Wasm
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
console_error_panic_hook = "0.1.6"
console_log = "1.0"
reqwest = "0.11"
getrandom = { version = "0.2.15", features = ["js"] }

[profile.dev]
codegen-units = 32

[profile.release]
strip = true
codegen-units = 1
