[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = { workspace = true }
winit = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
cgmath = { workspace = true }
tobj = { workspace = true }
rand = { workspace = true }
image = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
reqwest = { workspace = true }
getrandom = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
fs_extra = "1.2"
glob = "0.3"
