[package]
name = "editor-logic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
engine = { path = "../../engine" }
game-logic = { path = "../../game/logic" }
anyhow = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
cgmath = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.33.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
egui-winit = { version = "0.33.3", default-features = false }
