[package]
name = "editor-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../../engine" }
game-logic = { path = "../../game/logic" }
editor-logic = { path = "../logic" }
anyhow = "1.0"
hot-lib-reloader = "0.8.2"
env_logger = "0.10"
winit = { version = "0.30", features = ["android-native-activity"] }
egui = "0.33.3"
egui-wgpu = "0.33.3"
egui-winit = "0.33.3"
wgpu = "27.0.1"
