[package]
name = "game-runner"
version = "0.1.0"
edition = "2024"

[features]
hot-reload = ["dep:hot-lib-reloader"]

[dependencies]
engine = { path = "../../engine" }
game-logic = { path = "../logic" }
game-types = { path = "../types" }
hot-lib-reloader = { workspace = true, optional = true }
winit = { workspace = true }
